--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,48 +1,77 @@
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     android:orientation="vertical">
+
+    <android.support.v7.widget.Toolbar android:id="@+id/chat_fragment_toolbar"
+                                       android:layout_width="match_parent"
+                                       android:layout_height="wrap_content"
+                                       android:background="@color/colorPrimary"
+                                       android:elevation="4dp"
+                                       android:theme="@style/ThemeOverlay.AppCompat.Dark"
+    />
+
+    <LinearLayout android:id="@+id/message_container"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_alignParentBottom="true"
+                  android:background="@color/pure_white"
+                  android:orientation="horizontal"
+                  android:paddingStart="@dimen/activity_horizontal_margin">
+
+        <EditText
+            android:id="@+id/message_input"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_weight="7"
+            android:background="@null"
+            android:hint="@string/prompt_message"
+            android:inputType="textCapSentences|textShortMessage|textMultiLine"
+            android:maxLines="3"
+            android:paddingBottom="12dp"
+            android:paddingTop="12dp"
+            android:singleLine="false"
+            android:textSize="@dimen/body_font_size"
+        />
+
+        <RelativeLayout android:id="@+id/send_button"
+                        android:layout_width="0px"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:alpha="0.25">
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_centerInParent="true"
+                android:scaleType="fitCenter"
+                android:src="@drawable/icon_send"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/chat_list"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/message_container"
+        android:layout_below="@id/chat_fragment_toolbar"
         android:layout_weight="1"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:background="#2b3139"
         android:scrollbarStyle="outsideOverlay"
         android:scrollbars="vertical"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin">
 
-        <EditText
-            android:id="@+id/message_input"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="@string/prompt_message"
-            android:imeActionId="@+id/send"
-            android:imeActionLabel="@string/action_send"
-            android:imeOptions="actionSend"
-            android:inputType="text"
-            android:maxLines="1"
-            android:singleLine="true"/>
+    <TextView android:id="@+id/empty_view_messanger"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_centerInParent="true"
+              android:text="No message history."
+              android:textColor="@color/pure_white"
+              android:visibility="gone"
+    />
 
-        <ImageButton
-            android:id="@+id/send_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/action_send"
-            android:src="@android:drawable/ic_menu_send"/>
 
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
