--- a/app/src/main/res/layout/fragment_feed_detail_page.xml
+++ b/app/src/main/res/layout/fragment_feed_detail_page.xml
@@ -61,6 +61,7 @@
                 android:layout_width="0px"
                 android:layout_height="match_parent"
                 android:layout_weight="4"
+                android:maxLines="2"
                 android:background="#FFFFFF"
                 android:hint="Enter your comment... "
                 android:inputType="textCapSentences|textMultiLine|textShortMessage"
