--- a/app/src/main/res/layout/fragment_rooms.xml
+++ b/app/src/main/res/layout/fragment_rooms.xml
@@ -5,6 +5,14 @@
                 android:layout_height="match_parent"
                 tools:context="com.linute.linute.MainContent.Chat.RoomsActivityFragment">
 
+    <android.support.v7.widget.Toolbar android:id="@+id/rooms_toolbar"
+                                       android:layout_width="match_parent"
+                                       android:layout_height="wrap_content"
+                                       android:background="@color/colorPrimary"
+                                       android:elevation="4dp"
+                                       android:theme="@style/ThemeOverlay.AppCompat.Dark"
+    />
+
     <TextView android:id="@+id/rooms_empty_text"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
@@ -15,10 +23,25 @@
               android:visibility="gone"
     />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rooms_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <android.support.v4.widget.SwipeRefreshLayout android:id="@+id/swipe_refresh_rooms"
+                                                  android:layout_below="@id/rooms_toolbar"
+                                                  android:layout_width="match_parent"
+                                                  android:layout_height="wrap_content">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rooms_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/rooms_toolbar"/>
 
-    </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+
+    <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
+                                                        android:layout_width="wrap_content"
+                                                        android:layout_height="wrap_content"
+                                                        android:layout_alignParentBottom="true"
+                                                        android:layout_alignParentEnd="true"
+                                                        android:layout_margin="@dimen/fab_margin"
+                                                        android:src="@drawable/ic_action_new_message"
+    />
 </RelativeLayout>
