--- a/app/src/main/res/layout/square_camera_edit_save_video.xml
+++ b/app/src/main/res/layout/square_camera_edit_save_video.xml
@@ -1,5 +1,4 @@
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
@@ -17,22 +16,35 @@
             android:id="@+id/video_frame"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center" />
 
-        <com.linute.linute.UtilsAndHelpers.NoSuggestionsTextView
-            android:id="@+id/textView"
+        <FrameLayout
+            android:id="@+id/overlays"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="120dp"
-            android:background="#96000000"
-            android:gravity="center"
-            android:lines="1"
-            android:paddingBottom="8dp"
-            android:paddingTop="8dp"
-            android:textColor="@android:color/white"
-            android:textSize="14sp"
-            android:visibility="gone"
-        />
+            android:layout_height="match_parent">
+
+            <android.support.design.widget.CoordinatorLayout
+                android:id="@+id/stickers_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <!--Trash Can for deleting -->
+            </android.support.design.widget.CoordinatorLayout>
+
+
+            <com.linute.linute.UtilsAndHelpers.NoSuggestionsTextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="120dp"
+                android:background="#96000000"
+                android:gravity="center"
+                android:lines="1"
+                android:paddingBottom="8dp"
+                android:paddingTop="8dp"
+                android:textColor="@android:color/white"
+                android:textSize="14sp"
+                android:visibility="gone" />
+        </FrameLayout>
 
     </FrameLayout>
 
@@ -51,8 +63,7 @@
         android:paddingTop="8dp"
         android:textColor="@android:color/white"
         android:textSize="14sp"
-        android:visibility="gone"
-    />
+        android:visibility="gone" />
 
     <FrameLayout
         android:id="@+id/bottom"
@@ -78,8 +89,7 @@
                 android:shadowRadius="1.3"
                 android:text="anon\ncomments"
                 android:textColor="@color/pure_white"
-                android:textSize="12sp"
-            />
+                android:textSize="12sp" />
 
             <CheckBox
                 android:id="@+id/anon_comments"
@@ -87,8 +97,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:button="@drawable/turn_anon_comments_off"
-                android:checked="true"
-            />
+                android:checked="true" />
 
         </LinearLayout>
 
@@ -98,7 +107,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:button="@drawable/play_pause_checkbox"
-            android:checked="true"/>
+            android:checked="true" />
 
 
         <LinearLayout
@@ -120,25 +129,47 @@
                 android:shadowRadius="1.3"
                 android:text="post\nas"
                 android:textColor="@color/pure_white"
-                android:textSize="12sp"
-            />
+                android:textSize="12sp" />
 
             <CheckBox
                 android:id="@+id/anon_post"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:button="@drawable/post_as_anon_checkbox"
-            />
+                android:button="@drawable/post_as_anon_checkbox" />
         </LinearLayout>
     </FrameLayout>
+
+
+    <ImageView
+        android:id="@+id/sticker_trash"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|center_horizontal"
+        android:padding="12dp"
+        android:src="@drawable/ic_icon_send"
+        android:visibility="gone" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/sticker_drawer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#CC000000"
+        android:visibility="gone" />
 
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/top"
         android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize"
-    >
+        android:layout_height="?android:attr/actionBarSize">
+
+
+        <ImageView
+            android:id="@+id/sticker_drawer_handle"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_fire_off" />
 
         <com.linute.linute.UtilsAndHelpers.SquareFrameLayout
             android:layout_width="wrap_content"
@@ -152,7 +183,7 @@
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"
                 android:foreground="?selectableItemBackgroundBorderless"
-                android:src="@drawable/ic_action_check83"/>
+                android:src="@drawable/ic_action_check83" />
 
             <ProgressBar
                 android:id="@+id/editFragment_progress_bar"
@@ -160,7 +191,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
         </com.linute.linute.UtilsAndHelpers.SquareFrameLayout>
     </android.support.v7.widget.Toolbar>
