--- a/app/src/main/res/layout/square_camera_edit_save_video.xml
+++ b/app/src/main/res/layout/square_camera_edit_save_video.xml
@@ -23,6 +23,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <com.linute.linute.SquareCamera.overlay.WipeViewPager
+                android:id="@+id/filter_overlay"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
             <android.support.design.widget.CoordinatorLayout
                 android:id="@+id/stickers_container"
                 android:layout_width="match_parent"
