--- a/app/src/main/res/layout/fragment_crop.xml
+++ b/app/src/main/res/layout/fragment_crop.xml
@@ -19,7 +19,6 @@
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
         android:background="@android:color/transparent"
-        app:navigationIcon="@drawable/ic_action_navigation_arrow_back_inverted"
-    />
+        app:navigationIcon="@drawable/ic_action_navigation_close"/>
 
 </FrameLayout>
