--- a/app/src/main/res/layout/layout_new_notifications_bubble.xml
+++ b/app/src/main/res/layout/layout_new_notifications_bubble.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/notification"
-    android:layout_width="16dp"
-    android:layout_height="16dp"
-    android:layout_gravity="top|right"
-    android:layout_marginEnd="1dp"
-    android:layout_marginTop="12dp"
-    android:visibility="gone"
+<FrameLayout android:id="@+id/notification"
+             xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="16dp"
+             android:layout_height="16dp"
+             android:layout_gravity="top|right"
+             android:layout_marginEnd="1dp"
+             android:layout_marginTop="12dp"
+             android:visibility="gone"
 >
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/circle_indicator"
         android:layout_gravity="center"
-        />
+        android:src="@drawable/circle_indicator"
+    />
     <TextView
         android:id="@+id/notification_count"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:gravity="center"
         android:fontFamily="sans-serif"
-        android:textStyle="bold"
-        android:textSize="10dp" />
+        android:gravity="center"
+        android:textColor="@color/pure_white"
+        android:textSize="10dp"
+        android:textStyle="bold"/>
 
 
 </FrameLayout>
