--- a/app/src/main/res/layout/toolbar_updates_icon.xml
+++ b/app/src/main/res/layout/toolbar_updates_icon.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout
     style="@android:style/Widget.ActionButton"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -12,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:src="@drawable/ic_action_turn20" />
+        android:src="@drawable/ic_action_turn20"/>
 
-    <include layout="@layout/layout_new_notifications_bubble" />
+    <include layout="@layout/layout_new_notifications_bubble"/>
+
 </FrameLayout>
