--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -10,7 +10,16 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark" />
+        android:theme="@style/ThemeOverlay.AppCompat.Dark" >
+        <ImageView
+            android:id="@+id/toolbar_chat_settings"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_action_action_settings"
+            android:layout_gravity="right"
+            android:padding="8dp"
+            />
+        </android.support.v7.widget.Toolbar>
 
     <!-- RecyclerView needs to be in FrameLayout to contain the destructive power of clipChildren=false-->
     <FrameLayout
