--- a/app/src/main/res/layout/square_camera_edit_save.xml
+++ b/app/src/main/res/layout/square_camera_edit_save.xml
@@ -143,7 +143,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="top|center_horizontal"
         android:padding="12dp"
-        android:src="@drawable/ic_icon_send"
+        android:src="@mipmap/trash_can_closed"
         android:visibility="gone" />
 
     <android.support.v7.widget.RecyclerView
@@ -163,7 +163,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:src="@drawable/ic_fire_off" />
+            android:src="@mipmap/sticker_drawer" />
 
         <com.linute.linute.UtilsAndHelpers.SquareFrameLayout
             android:layout_width="wrap_content"
