--- a/app/src/main/res/layout/square_camera_edit_save.xml
+++ b/app/src/main/res/layout/square_camera_edit_save.xml
@@ -148,6 +148,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/sticker_drawer"
+        android:paddingTop="32dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#CC000000"
