--- a/app/src/main/res/layout/activity_new_post_create.xml
+++ b/app/src/main/res/layout/activity_new_post_create.xml
@@ -95,7 +95,7 @@
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground">
             <TextView
-                android:id="@+id/selector_text"
+                android:id="@+id/selector_text0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -116,7 +116,7 @@
             android:foreground="?android:attr/selectableItemBackground"
         >
             <TextView
-                android:id="@+id/selector_text"
+                android:id="@+id/selector_text1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -138,7 +138,7 @@
         >
 
             <TextView
-                android:id="@+id/selector_text"
+                android:id="@+id/selector_text2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -160,7 +160,7 @@
             android:foreground="?android:attr/selectableItemBackground">
 
             <TextView
-                android:id="@+id/selector_text"
+                android:id="@+id/selector_text3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -184,7 +184,7 @@
         >
 
             <TextView
-                android:id="@+id/selector_text"
+                android:id="@+id/selector_text4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -207,7 +207,7 @@
         >
 
             <TextView
-                android:id="@+id/selector_text"
+                android:id="@+id/selector_text5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
