--- a/app/src/main/res/drawable/chat_item_you.xml
+++ b/app/src/main/res/drawable/chat_item_you.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
 
-    <solid android:color="@color/pure_white"/>
+    <solid android:color="#FFCDCDCD"/>
     <corners android:radius="2dp"/>
 </shape>
