--- a/app/src/main/res/layout/fragment_chat_list_item_date_header.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_date_header.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
-    android:textColor="@color/fifty_white"
+    android:textColor="#FF444444"
     android:padding="4dp"
     android:textSize="16sp"
     android:textAllCaps="true"
