--- a/app/src/main/res/layout/fragment_chat_list_item_you.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_you.xml
@@ -10,78 +10,92 @@
     android:layout_marginStart="12dp"
     android:layout_marginTop="4dp"
     android:clipChildren="true"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="150dp"
-        android:layout_height="match_parent"
-        android:layout_marginStart="-150dp"
-        android:gravity="center_vertical|end"
-        android:padding="12dp">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/chat_user_time"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:gravity="end|center_vertical"
-            android:textColor="@color/seperator_color"
-            android:textSize="@dimen/sub_font_size"
-            tools:text="3:00AM" />
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="150dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="-150dp"
+            android:gravity="center_vertical|end"
+            android:padding="12dp">
 
+            <TextView
+                android:id="@+id/chat_user_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:gravity="end|center_vertical"
+                android:textColor="@color/seperator_color"
+                android:textSize="@dimen/sub_font_size"
+                tools:text="3:00AM" />
+        </LinearLayout>
 
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/profile_image"
             android:layout_width="48dp"
-            android:layout_height="match_parent"
-            android:scaleType="centerInside"
-            android:layout_gravity="center_vertical"
-            app:riv_corner_radius="@dimen/user_icon_corner_radius"
+            android:layout_height="48dp"
+            android:layout_gravity="bottom|center_horizontal"
             android:layout_marginRight="4dp"
-            />
+            android:scaleType="centerInside"
+            app:riv_corner_radius="@dimen/user_icon_corner_radius" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <com.linute.linute.UtilsAndHelpers.SquareFrameLayout
-            android:id="@+id/frame"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_gravity="start"
-            android:visibility="gone">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-            <com.makeramen.roundedimageview.RoundedImageView
-                android:id="@+id/image"
+            <com.linute.linute.UtilsAndHelpers.SquareFrameLayout
+                android:id="@+id/frame"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:scaleType="centerCrop"
-                app:riv_corner_radius="2dp" />
+                android:layout_gravity="start"
+                android:visibility="gone">
 
-            <ImageView
-                android:id="@+id/cinema_icon"
+                <com.makeramen.roundedimageview.RoundedImageView
+                    android:id="@+id/image"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:scaleType="centerCrop"
+                    app:riv_corner_radius="2dp" />
+
+                <ImageView
+                    android:id="@+id/cinema_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_cinema" />
+
+            </com.linute.linute.UtilsAndHelpers.SquareFrameLayout>
+
+            <TextView
+                android:id="@+id/chat_user_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_cinema" />
-
-        </com.linute.linute.UtilsAndHelpers.SquareFrameLayout>
-
-        <TextView
-            android:id="@+id/chat_user_message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:autoLink="web|email"
-            android:background="@drawable/chat_item_you"
-            android:padding="12dp"
-            android:textColor="@color/eighty_black"
-            android:textSize="@dimen/body_font_size"
-            tools:text="test dfsdf sdf ddf dftest dfsdf sdf ddf dftest dfsdf sdf ddf dftest dfsdf sdf ddf dftest dfsdf sdf ddf df " />
+                android:layout_gravity="start"
+                android:autoLink="web|email"
+                android:background="@drawable/chat_item_you"
+                android:padding="12dp"
+                android:textColor="@color/eighty_black"
+                android:textSize="@dimen/body_font_size"
+                tools:text="test dfsdf sdf ddf dftest dfsdf sdf ddf dftest dfsdf sdf ddf dftest dfsdf sdf ddf dftest dfsdf sdf ddf df " />
 
 
-    </FrameLayout>
+        </FrameLayout>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/user_name"
+        android:layout_width="wrap_content"
+        android:layout_height="16dp"
+        android:layout_gravity="center_vertical"
+        android:text="User Name"
+        android:textColor="#CCCCCCCC"
+        android:textSize="12sp" />
 
 
 </LinearLayout>
