--- a/app/src/main/res/layout/fragment_chat_list_item_me.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_me.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,17 +9,15 @@
     android:layout_marginEnd="12dp"
     android:layout_marginStart="48dp"
     android:layout_marginTop="4dp"
-    android:orientation="horizontal"
     android:clipChildren="false"
-    >
+    android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="150dp"
         android:layout_height="match_parent"
-        android:padding="12dp"
         android:layout_marginStart="-186dp"
         android:gravity="center_vertical|end"
-        >
+        android:padding="12dp">
 
         <ImageView
             android:id="@+id/message_action_icon"
@@ -28,17 +25,17 @@
             android:layout_height="18dp"
             android:layout_marginEnd="4dp"
             android:layout_marginStart="2dp"
-            android:scaleType="centerInside"
             android:gravity="end|center_vertical"
+            android:scaleType="centerInside"
             android:src="@drawable/delivered_chat" />
 
         <TextView
             android:id="@+id/chat_user_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center_vertical|end"
             android:textColor="@color/seperator_color"
             android:textSize="@dimen/sub_font_size"
-            android:gravity="center_vertical|end"
             tools:text="3:00AM" />
 
     </LinearLayout>
@@ -59,9 +56,8 @@
                 android:id="@+id/image"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                app:riv_corner_radius="@dimen/user_icon_corner_radius"
                 android:scaleType="centerCrop"
-                />
+                app:riv_corner_radius="@dimen/user_icon_corner_radius" />
 
             <ImageView
                 android:id="@+id/cinema_icon"
@@ -72,17 +68,30 @@
 
         </com.linute.linute.UtilsAndHelpers.SquareFrameLayout>
 
-        <TextView
-            android:id="@+id/chat_user_message"
+        <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:autoLink="web|email"
-            android:background="@drawable/chat_item_me"
-            android:padding="12dp"
-            android:textColor="@color/pure_white"
-            android:textSize="@dimen/body_font_size"
-            tools:text="test dfsdf sdf fsdf sdf ddf df " />
+            android:layout_gravity="end">
+
+            <TextView
+                android:id="@+id/chat_user_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:autoLink="web|email"
+                android:background="@drawable/chat_item_me"
+                android:padding="12dp"
+                android:textColor="@color/pure_white"
+                android:textSize="@dimen/body_font_size"
+                tools:text="test dfsdf sdf fsdf sdf ddf df " />
+
+            <ImageView
+                android:id="@+id/read_receipt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|right"
+                />
+
+        </FrameLayout>
 
     </FrameLayout>
 
