--- a/app/src/main/res/layout/toolbar_chat.xml
+++ b/app/src/main/res/layout/toolbar_chat.xml
@@ -7,6 +7,7 @@
     android:gravity="center_horizontal">
     <!--this space is necessary so that the chat image doesn't get cut, not sure why-->
     <Space
+        android:id="@+id/space_actions_item_balancer"
         android:layout_gravity="left"
         android:layout_width="16dp"
         android:layout_height="match_parent" />
@@ -22,7 +23,7 @@
         android:layout_marginRight="4dp"
           />-->
     <TextView
-        android:id="@+id/toolbar_chat_user_name"
+        android:id="@+id/toolbar_chat_name"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center"
